# centaur

./: AGENTS.md  CLAUDE.md  FORK.md  Makefile  pnpm-lock.yaml
.agents/skills/deployment-captain/: SKILL.md
.github/workflows/: ci.yml  pr-reviews.yml  publish-images.yml
contrib/chart/: Chart.yaml  values.schema.json  values.yaml
contrib/chart/templates/: apirs.yaml  networkpolicy.yaml  workloads.yaml
contrib/scripts/: bootstrap-k8s-secrets.sh
docs/pages/: quickstart.mdx
docs/pages/reference/: configuration.mdx  tool-directory.mdx
docs/public/md/: quickstart.md
harness/codex/: config.toml
services/api/api/: agent.py  iron-proxy.base.yaml  logging_config.py  redaction.py  runtime_control.py  slackbot_client.py  tool_manager.py  vm_metrics.py  workflow_engine.py
services/api/tests/: test_agent_resilience.py  test_codex_app_wrapper.py  test_heartbeat_investigation_workflow.py  test_logging_config.py  test_normalize.py  test_sandbox_entrypoint.py  test_slack_sync.py  test_slack_thread_metadata.py  test_tool_manager.py  test_workflows.py
services/console/config/: routes.rb
services/linearbot/src/: overrides.ts
services/linearbot/test/: overrides.test.ts
services/sandbox/: SYSTEM_PROMPT.md  codex-app-wrapper.py
services/slackbot/: .env.example
services/slackbot/src/: index.test.ts  index.ts
services/slackbotv2/src/: index.ts  overrides.ts  types.ts
services/slackbotv2/test/: chat-sdk-emulate.test.ts  overrides.test.ts
tools/: README.md
tools/business/pylon/: README.md  cli.py  (+3 more)
tools/business/tavus-api/: .env.example  cli.py  client.py  pyproject.toml
tools/infra/signoz/: .env.example  cli.py  client.py  pyproject.toml
workflows/: deployment_captain.py  slack_sync_shared.py
workflows/tests/: test_deployment_captain.py
(+37 files in other folders)
