[project]
name = "tavus-api"
description = "Read-only Tavus public API access for agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
tavus-api = "tavus-api.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
timeout_s = 60
secrets = [
    {type = "http", name = "TAVUS_PROD_API_KEY", match_headers = ["x-api-key"], hosts = ["tavusapi.com"]},
    {type = "http", name = "TAVUS_STAGING_API_KEY", match_headers = ["x-api-key"], hosts = ["test.rqh.tavusapi.com"]},
]
optional_secrets = [
    {type = "http", name = "TAVUS_STG_API_KEY", match_headers = ["x-api-key"], hosts = ["stg.rqh.tavusapi.com"]},
]
