[project]
name = "signoz"
description = "SigNoz MCP-backed observability queries for agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
signoz = "centaur_tool_signoz.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_signoz"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
timeout_s = 120
secrets = [
    {type = "http", name = "SIGNOZ_API_KEY", match_headers = ["SIGNOZ-API-KEY"], hosts = ["mcp.us.signoz.cloud", "mcp.us2.signoz.cloud", "mcp.eu.signoz.cloud", "mcp.eu2.signoz.cloud", "mcp.in.signoz.cloud", "mcp.in2.signoz.cloud"]},
]
